tests/invalid_ast_samples/2bd68197b059e2fa32971c238286d02e97c73eab57c32db0a594d6af8c4ecb08.py
from ast import Module
from ast import Pass
from ast import Try

tree = Module(
    body=[Try(body=[Pass()], handlers=[], orelse=[], finalbody=[])], type_ignores=[]
)

# version: 3.9.15
# seed = 4634023
#
# Source:
# try:
#     pass
#
#
# Error:
#     SyntaxError('unexpected EOF while parsing', ('<file>', 2, 9, '    pass\n'))
